testdata/baselines/reference/submodule/compiler/classAccessorInitializationInferenceWithElementAccess1.errors.txt
classAccessorInitializationInferenceWithElementAccess1.ts(2,14): error TS7008: Member 'x' implicitly has an 'any' type.
classAccessorInitializationInferenceWithElementAccess1.ts(3,14): error TS7008: Member 'y' implicitly has an 'any' type.
classAccessorInitializationInferenceWithElementAccess1.ts(4,14): error TS7008: Member 'z' implicitly has an 'any' type.
classAccessorInitializationInferenceWithElementAccess1.ts(6,14): error TS7008: Member '0' implicitly has an 'any' type.


==== classAccessorInitializationInferenceWithElementAccess1.ts (4 errors) ====
    export class Cls {
        accessor x;
                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        accessor y;
                 ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
        accessor z;
                 ~
!!! error TS7008: Member 'z' implicitly has an 'any' type.
    
        accessor 0;
                 ~
!!! error TS7008: Member '0' implicitly has an 'any' type.
    
        constructor(seed: number) {
            this['x'] = [seed];
            this['y'] = { seed };
            this['z'] = `${seed}`;
    
            this[0] = [seed];
        }
    }
    